# shortsmaker

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  channel.example.json  pyproject.toml  requirements.txt  start-shortsmaker.bat  stop-shortsmaker.bat
shortsmaker/: __init__.py  captions.py  cli.py  config.py  edits.py  llm.py  names.py  pipeline.py  reframe.py  util.py  webui.py  youtube.py
shortsmaker/stages/: assemble.py  cleanup.py  highlights.py  ingest.py  script_gen.py  transcribe.py  tts.py
shortsmaker/static/: index.html
